# nldg

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
experiments/: bcd_test_runtime.py  ca_housing_analysis.py  ca_housing_counties.py  ca_housing_data_import.py  ca_housing_utils.py  comparison_different_noise.py  comparison_equal_envs.py  comparison_gdro_magging.py  experiments_isd.py  experiments_magging.py  experiments_maximin.py  housing_data_analysis.py  parallel_test_runtime.py  plot_results.ipynb  real_data_rf.py  results_rf.ipynb  sim_diff_methods.py  sim_eg_bcd.py  sim_gen_gap.py  sim_mse_degeneration.py  sim_smoothsplines.py  simulation.py  simulation_rf.py  simulation_rf_2.py  style.mplstyle  test_parallel.py  utils.py
experiments/additional/: ca_housing_hyperparameters.py  comparison_GP.py  comparison_drol.py  comparison_gdro.py  comparison_gdro_GP.py  comparison_hyperparameters.py  comparison_indeterminate_leaves.py  comparison_intro.py  comparison_magging.ipynb  comparison_weights.py  comparison_weights_ERM.py  comparison_weights_MaxRM.py  datasets_comparison.py  methods_comparison.py  sim_eg_bcd.py  tree_rf_comparison.py
experiments/new/: simulation.py  simulation_RF.py  simulation_RF_adapt.py  simulation_nn.py  utils.py
experiments/old/: experiments_isd.py  experiments_isd_time.py  experiments_magging.py  experiments_maximin.py  utils.py
experiments/old_experiments/: bcd_test_runtime.py  comparison_different_noise.py  comparison_drol.py  comparison_gdro.py  comparison_gdro_magging_covariates.py  datasets_comparison.py  parallel_test_runtime.py  sim_gen_gap.py  sim_mse_degeneration.py  sim_smoothsplines.py
fluxnet/: create_subset_daily.py  dataloader.py  eval.py  extrapolation_indices.py  preprocessing.py  run_all.py  run_experiment.py  run_experiment_distance.py
fluxnet/cv/: dataloader.py  run_experiment.py
nldg/: gam.py  isd.py  jbd.py  lr.py  maximin.py  nn.py  rf.py  smoothing_splines.py  splines.py  ss.py  ss_utils.py  train_nn.py  utils.py  uwedge.py
nldg/additional/: data.py  data_CA.py  data_GP.py  data_GP_proper.py  data_new.py  drol.py  gdro.py  gdro_new.py  utils.py
notebooks/: all_methods.ipynb  analytical_sol.ipynb  code_optimization.ipynb  demo.ipynb  demo_gam.ipynb  demo_rf.ipynb  demo_ss.ipynb  minimax_rf.ipynb  miscellanea.ipynb  mmr.ipynb  optimal_function.ipynb  plot_settings_rf.ipynb  settings_rf.ipynb  smoothing_splines.ipynb  splines.ipynb  splines_optimization.ipynb  test_rf.ipynb  test_splines.ipynb  worme_rf.ipynb
tests/: test_jbd.py
(+50 files in other folders)
